# code

./: LICENSE  README.md  requirements.txt  requirements_gpu.txt
chapter2/: README.md  chapter-2.ipynb  train.py
chapter4/: dataset_yolo.py  det_demo_torchvision.py  model_yolo.py  train_yolo.py
chapter5/: dataset_seg.py  model_seg.py  train_seg.py
chapter6/: folder_dataset.py  infer_depth.py  train_depth.py
chapter7/: multitask_dataset.py  multitask_model.py  multitask_model_compress.py  train_multitask.py
chapter8/: Dockerfile  deploy_multitask.py
chapter8/infer_torch/: CMakeLists.txt  SegMetric.hpp  run_docker.sh  torch_inference.cpp  torch_inference_gpu.cpp
chapter8/infer_torch/.devcontainer/: devcontainer.json
chapter8/infer_trt/: CMakeLists.txt  HDTimer.h  SegMetric.hpp  compare.ipynb  onnx_to_engine.py  run_docker.sh  trt_inference.cpp
chapter8/infer_trt/.devcontainer/: devcontainer.json
configs/: compress_config.json  compress_config_diff.json  compress_config_no.json  monodepth.yaml  monodepth_regnet.yaml
detection_torchvision/: coco_eval.py  coco_utils.py  engine.py  retinanet.py  train.py
lib/: logger.py  loss.py  metrics.py  model.py  seg_head.py  utils.py  yolo_head.py
lib/backbone/: regnet.py  regnet_fpn.py  resnet.py
lib/monodepth/: depth_decoder.py  depth_encoder.py  depth_encoder_regnet.py  layers.py  net.py  pose_decoder.py  pose_encoder.py  resnet.py
